--- a/SlackClone/Base.lproj/Main.storyboard
+++ b/SlackClone/Base.lproj/Main.storyboard
@@ -1,24 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Reveal View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SWRevealViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="PBI-ZN-Spn" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="zhm-KA-ndX"/>
+                        <segue destination="PMC-Q5-29N" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="dkJ-ph-Ub6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--ChatVC-->
+        <scene sceneID="EKd-H6-Lpb">
+            <objects>
+                <viewController id="PMC-Q5-29N" customClass="ChatVC" customModule="SlackClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vPZ-19-nLm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R5y-sl-lHk">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I0A-kq-oap">
+                                        <rect key="frame" x="8" y="46" width="24" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="A4d-de-WIZ"/>
+                                            <constraint firstAttribute="height" constant="18" id="xKB-L8-Ou5"/>
+                                        </constraints>
+                                        <state key="normal" image="smackBurger"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# general" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TxN-Cq-PvO">
+                                        <rect key="frame" x="139" y="41.666666666666664" width="97" height="26.999999999999993"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                        <color key="textColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.28235294117647058" green="0.44705882352941173" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="I0A-kq-oap" firstAttribute="centerY" secondItem="R5y-sl-lHk" secondAttribute="centerY" constant="15" id="C2a-X4-Ww3"/>
+                                    <constraint firstItem="TxN-Cq-PvO" firstAttribute="centerX" secondItem="R5y-sl-lHk" secondAttribute="centerX" id="Lnq-eu-tyf"/>
+                                    <constraint firstAttribute="height" constant="80" id="YQN-nm-rBd"/>
+                                    <constraint firstItem="I0A-kq-oap" firstAttribute="leading" secondItem="R5y-sl-lHk" secondAttribute="leading" constant="8" id="nDw-0g-4Au"/>
+                                    <constraint firstItem="TxN-Cq-PvO" firstAttribute="centerY" secondItem="R5y-sl-lHk" secondAttribute="centerY" constant="15" id="pNu-wN-ihh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="R5y-sl-lHk" firstAttribute="leading" secondItem="zg4-la-QNX" secondAttribute="leading" id="8bI-PO-8aB"/>
+                            <constraint firstItem="R5y-sl-lHk" firstAttribute="trailing" secondItem="zg4-la-QNX" secondAttribute="trailing" id="Pyq-jB-JsZ"/>
+                            <constraint firstItem="R5y-sl-lHk" firstAttribute="top" secondItem="vPZ-19-nLm" secondAttribute="top" id="uhC-iY-iGQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="zg4-la-QNX"/>
+                    </view>
+                    <connections>
+                        <outlet property="hamBurgerBtn" destination="I0A-kq-oap" id="z8v-8b-mo5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M3v-pj-Pzv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1472.8" y="679.06403940886707"/>
+        </scene>
+        <!--ChannelVC-->
+        <scene sceneID="60t-MI-cGh">
+            <objects>
+                <viewController id="PBI-ZN-Spn" customClass="ChannelVC" customModule="SlackClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7Ve-nw-9Le">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="lMY-V0-xm9"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QED-aR-GIV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1449" y="-92"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="smackBurger" width="40" height="40"/>
+    </resources>
 </document>
