--- a/SlackClone/Base.lproj/Main.storyboard
+++ b/SlackClone/Base.lproj/Main.storyboard
@@ -471,6 +471,7 @@
                         <outlet property="passwordTxtField" destination="8qC-vr-zUn" id="tzS-qK-hB6"/>
                         <outlet property="usernameTxtField" destination="Oka-R5-cLm" id="XtW-Ra-p1D"/>
                         <segue destination="jVc-dl-MII" kind="unwind" identifier="unwindSegue" unwindAction="unwindFromSignUpVCWithSender:" id="dev-EK-fhT"/>
+                        <segue destination="36B-mu-FDH" kind="show" identifier="toAvatarPicker" id="KZ0-ey-ZYV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DEU-xh-fRt" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -478,11 +479,100 @@
             </objects>
             <point key="canvasLocation" x="3039.1999999999998" y="-92.364532019704441"/>
         </scene>
+        <!--Avatar PickerVC-->
+        <scene sceneID="eyC-Nv-GDr">
+            <objects>
+                <viewController id="36B-mu-FDH" customClass="AvatarPickerVC" customModule="SlackClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7bu-g5-dop">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aEP-an-frx">
+                                <rect key="frame" x="16" y="44" width="28" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="smackBack"/>
+                                <connections>
+                                    <action selector="backBtnTapped:" destination="36B-mu-FDH" eventType="touchUpInside" id="5VW-Tf-s37"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="0Kl-fA-wmE">
+                                <rect key="frame" x="117.66666666666669" y="44" width="140" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="KoC-6I-VYE"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="raV-JN-Hn4"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Dark"/>
+                                    <segment title="Light"/>
+                                </segments>
+                                <color key="tintColor" red="0.21847411990000001" green="0.58130913969999998" blue="0.76872140170000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="segmentControlValueChanged:" destination="36B-mu-FDH" eventType="valueChanged" id="n25-jU-18Q"/>
+                                </connections>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="RSg-PM-2wa">
+                                <rect key="frame" x="0.0" y="104" width="375" height="674"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7xk-DD-s5P">
+                                    <size key="itemSize" width="80" height="80"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionCell" id="cm2-KI-SH6" customClass="AvatarCell" customModule="SlackClone" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="0.0" width="80" height="80"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dark0" translatesAutoresizingMaskIntoConstraints="NO" id="1Js-MN-rDh">
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                                    <color key="backgroundColor" red="0.60392156862745094" green="0.60392156862745094" blue="0.60392156862745094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="1Js-MN-rDh" firstAttribute="top" secondItem="cm2-KI-SH6" secondAttribute="top" id="Cng-fa-UeZ"/>
+                                            <constraint firstAttribute="trailing" secondItem="1Js-MN-rDh" secondAttribute="trailing" id="VH4-Sn-Ph3"/>
+                                            <constraint firstItem="1Js-MN-rDh" firstAttribute="leading" secondItem="cm2-KI-SH6" secondAttribute="leading" id="gG3-GE-KeZ"/>
+                                            <constraint firstAttribute="bottom" secondItem="1Js-MN-rDh" secondAttribute="bottom" id="yRs-5t-7sE"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="cellImageView" destination="1Js-MN-rDh" id="774-nj-rGq"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RSg-PM-2wa" firstAttribute="leading" secondItem="6kJ-FL-mWv" secondAttribute="leading" id="Dhe-hM-fad"/>
+                            <constraint firstItem="RSg-PM-2wa" firstAttribute="bottom" secondItem="6kJ-FL-mWv" secondAttribute="bottom" id="Wzx-c7-RQO"/>
+                            <constraint firstItem="RSg-PM-2wa" firstAttribute="trailing" secondItem="6kJ-FL-mWv" secondAttribute="trailing" id="fCc-ag-QmX"/>
+                            <constraint firstItem="0Kl-fA-wmE" firstAttribute="centerX" secondItem="7bu-g5-dop" secondAttribute="centerX" id="gNt-Kz-BXH"/>
+                            <constraint firstItem="0Kl-fA-wmE" firstAttribute="top" secondItem="6kJ-FL-mWv" secondAttribute="top" id="v5v-Lw-E9n"/>
+                            <constraint firstItem="RSg-PM-2wa" firstAttribute="top" secondItem="0Kl-fA-wmE" secondAttribute="bottom" constant="30" id="yV5-Zf-nxd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6kJ-FL-mWv"/>
+                    </view>
+                    <connections>
+                        <outlet property="myCollectionView" destination="RSg-PM-2wa" id="ZJJ-Js-9t3"/>
+                        <outlet property="segmentControl" destination="0Kl-fA-wmE" id="qqq-tU-hOO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OqA-es-9a9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3829.5999999999999" y="-91.625615763546804"/>
+        </scene>
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
+        <image name="dark0" width="100" height="100"/>
         <image name="profileDefault" width="192" height="192"/>
+        <image name="smackBack" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
