--- a/SlackClone/Base.lproj/Main.storyboard
+++ b/SlackClone/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="moa-BQ-dle">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="moa-BQ-dle" customClass="RoundedImageView" customModule="SlackClone" customModuleProvider="target">
                                 <rect key="frame" x="16" y="678" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="hc9-rN-WYH"/>
@@ -312,6 +312,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="uWk-4H-OY6">
+                                <rect key="frame" x="169" y="607.66666666666663" width="37" height="37"/>
+                                <color key="color" red="0.3411764705882353" green="0.062745098039215685" blue="0.043137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eom-wl-nLE">
                                 <rect key="frame" x="329" y="44" width="30" height="30"/>
                                 <constraints>
@@ -333,10 +337,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="R2b-c7-bqA">
-                                        <rect key="frame" x="37.666666666666657" y="145.66666666666663" width="300" height="344"/>
+                                        <rect key="frame" x="37.666666666666657" y="160.99999999999997" width="300" height="313.33333333333326"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="EYa-J9-kVj">
-                                                <rect key="frame" x="0.0" y="0.0" width="300" height="125.66666666666667"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="126"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="lNN-Bm-rZ9">
                                                         <rect key="frame" x="0.0" y="0.0" width="300" height="22"/>
@@ -351,7 +355,7 @@
                                                                 <textInputTraits key="textInputTraits"/>
                                                             </textField>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xns-3k-7OL">
-                                                                <rect key="frame" x="0.0" y="17.000000000000028" width="300" height="5"/>
+                                                                <rect key="frame" x="0.0" y="17" width="300" height="5"/>
                                                                 <color key="backgroundColor" red="0.21960784310000001" green="0.58039215690000001" blue="0.76862745099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="5" id="N4S-Up-8Fk"/>
@@ -360,7 +364,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ls0-du-6dA">
-                                                        <rect key="frame" x="0.0" y="52.000000000000028" width="300" height="22"/>
+                                                        <rect key="frame" x="0.0" y="52" width="300" height="22"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QSX-M2-Kca">
                                                                 <rect key="frame" x="0.0" y="0.0" width="300" height="17"/>
@@ -381,10 +385,10 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9kG-zu-59a">
-                                                        <rect key="frame" x="0.0" y="104.00000000000003" width="300" height="21.666666666666671"/>
+                                                        <rect key="frame" x="0.0" y="104" width="300" height="22"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8qC-vr-zUn">
-                                                                <rect key="frame" x="0.0" y="0.0" width="300" height="16.666666666666668"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="300" height="17"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="ILg-2B-wLo"/>
                                                                 </constraints>
@@ -393,7 +397,7 @@
                                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                             </textField>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vrh-T6-DvX">
-                                                                <rect key="frame" x="0.0" y="16.666666666666629" width="300" height="5"/>
+                                                                <rect key="frame" x="0.0" y="17" width="300" height="5"/>
                                                                 <color key="backgroundColor" red="0.21960784310000001" green="0.58039215690000001" blue="0.76862745099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="5" id="E7P-U3-Mpj"/>
@@ -404,17 +408,17 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="nki-JH-zhP">
-                                                <rect key="frame" x="54.333333333333343" y="155.66666666666663" width="191" height="188.33333333333337"/>
+                                                <rect key="frame" x="54.333333333333343" y="156" width="191" height="157.33333333333337"/>
                                                 <subviews>
-                                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="LgT-tz-kNk">
-                                                        <rect key="frame" x="35.666666666666671" y="0.0" width="120.00000000000001" height="119.66666666666667"/>
+                                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="LgT-tz-kNk" customClass="RoundedImageView" customModule="SlackClone" customModuleProvider="target">
+                                                        <rect key="frame" x="45.666666666666657" y="0.0" width="100" height="100"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="120" id="5v3-mB-H0D"/>
-                                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="120" id="Rn6-eB-wPr"/>
+                                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="5v3-mB-H0D"/>
+                                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="Rn6-eB-wPr"/>
                                                         </constraints>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VnM-WN-YCg">
-                                                        <rect key="frame" x="46" y="144.66666666666669" width="99" height="18.666666666666657"/>
+                                                        <rect key="frame" x="46" y="124.99999999999999" width="99" height="7.3333333333333286"/>
                                                         <state key="normal" title="Choose avatar">
                                                             <color key="titleColor" red="0.21960784310000001" green="0.58039215690000001" blue="0.76862745099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </state>
@@ -423,7 +427,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2l0-nS-HUY">
-                                                        <rect key="frame" x="0.0" y="188.33333333333331" width="191" height="0.0"/>
+                                                        <rect key="frame" x="0.0" y="157.33333333333337" width="191" height="0.0"/>
                                                         <state key="normal" title="Generate Background Color">
                                                             <color key="titleColor" red="0.21960784310000001" green="0.58039215690000001" blue="0.76862745099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </state>
@@ -461,11 +465,14 @@
                             <constraint firstItem="Eom-wl-nLE" firstAttribute="top" secondItem="7e0-BT-Evd" secondAttribute="top" id="RCi-fB-sqt"/>
                             <constraint firstItem="7e0-BT-Evd" firstAttribute="trailing" secondItem="Eom-wl-nLE" secondAttribute="trailing" constant="16" id="b1j-dw-mxR"/>
                             <constraint firstItem="7AZ-Pi-hFG" firstAttribute="centerX" secondItem="2YA-fQ-qYQ" secondAttribute="centerX" id="htG-ad-1ZW"/>
+                            <constraint firstItem="uWk-4H-OY6" firstAttribute="centerX" secondItem="2YA-fQ-qYQ" secondAttribute="centerX" id="mII-J7-hah"/>
                             <constraint firstItem="7AZ-Pi-hFG" firstAttribute="top" secondItem="7e0-BT-Evd" secondAttribute="top" constant="50" id="xib-jA-8V7"/>
+                            <constraint firstItem="uWk-4H-OY6" firstAttribute="centerY" secondItem="2YA-fQ-qYQ" secondAttribute="centerY" constant="220" id="zjF-4W-WQt"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7e0-BT-Evd"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="uWk-4H-OY6" id="WIY-EX-1ME"/>
                         <outlet property="avatarImageIcon" destination="LgT-tz-kNk" id="oWt-y6-mjg"/>
                         <outlet property="emailTxtField" destination="QSX-M2-Kca" id="Rle-pf-kmd"/>
                         <outlet property="passwordTxtField" destination="8qC-vr-zUn" id="tzS-qK-hB6"/>
