channel VC login button name and colot update completed

--- a/SlackClone/Base.lproj/Main.storyboard
+++ b/SlackClone/Base.lproj/Main.storyboard
@@ -173,6 +173,7 @@
                     </view>
                     <connections>
                         <outlet property="loginBtn" destination="wUQ-b1-NUk" id="HyC-ZU-Jm3"/>
+                        <outlet property="profileImageView" destination="moa-BQ-dle" id="L9a-AA-PPC"/>
                         <segue destination="2eT-f1-taL" kind="show" identifier="toLogin" id="mQB-Qw-llM"/>
                     </connections>
                 </viewController>
